op-view overflow fix

--- a/src/style/pages/op-view.less
+++ b/src/style/pages/op-view.less
@@ -1,7 +1,15 @@
 .pkp_op_view {
   .header_view {
+	.title {
+		white-space: nowrap;
+		overflow: hidden;
+	}
   	.download {
+		position: absolute;
+		right: 0;
+		top: 0;
   		padding: 6px 15px;
+		background-color: #333;
   		&:before {
   		  content: '';
   		  vertical-align: middle;
